src/test/deca/codegen/valid/class-champs/field_simple.deca
// Description:
//    Declaration de classe avec un champ
//
// Resultats:
//    1
//
// Historique:
//    cree le 01/01/2022

class A {
    int x = 1;
}

{
    A a = new A();
    println(a.x);
}